// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store actionCreators should export actionCreators 1`] = `
Object {
  "payload": Object {
    "firstname": "abc",
    "id": "123",
    "lastname": "def",
  },
  "type": "[Users] CREATE",
}
`;

exports[`store actionCreators should export actionCreators 2`] = `
Object {
  "payload": "123",
  "type": "[Users] DELETE",
}
`;

exports[`store actionCreators should export actionCreators 3`] = `
Object {
  "payload": Object {
    "firstname": "abc",
    "id": "123",
    "lastname": "def",
  },
  "type": "[Users] UPDATE",
}
`;

exports[`store actionCreators should export actionCreators 4`] = `
Object {
  "payload": Array [
    Object {
      "firstname": "hij",
      "id": "456",
      "lastname": "klm",
    },
    Object {
      "firstname": "nop",
      "id": "789",
      "lastname": "qrs",
    },
  ],
  "type": "[Users] USERS UPDATED",
}
`;

exports[`store actionCreators should export actionCreators 5`] = `
Object {
  "type": "[Users] LOAD USERS",
}
`;

exports[`store actionCreators should export actionCreators 6`] = `
Object {
  "payload": [Error: error message],
  "type": "[Users] USERS ERROR",
}
`;

exports[`store actionCreators should export actionCreators 7`] = `
Object {
  "type": "[Users] USERS LOADED",
}
`;

exports[`store actions should export action types 1`] = `"[Users] CREATE"`;

exports[`store actions should export action types 2`] = `"[Users] UPDATE"`;

exports[`store actions should export action types 3`] = `"[Users] DELETE"`;

exports[`store actions should export action types 4`] = `"[Users] USERS UPDATED"`;

exports[`store actions should export action types 5`] = `"[Users] LOAD USERS"`;

exports[`store actions should export action types 6`] = `"[Users] USERS ERROR"`;

exports[`store actions should export action types 7`] = `"[Users] USERS LOADED"`;
